// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`hash_part.sql > line 1 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "partspec": {
            "location": 273,
            "partParams": [
              {
                "PartitionElem": {
                  "location": 292,
                  "name": "a",
                  "opclass": [
                    {
                      "String": {
                        "sval": "part_test_int4_ops",
                      },
                    },
                  ],
                },
              },
              {
                "PartitionElem": {
                  "location": 314,
                  "name": "b",
                  "opclass": [
                    {
                      "String": {
                        "sval": "part_test_text_ops",
                      },
                    },
                  ],
                },
              },
            ],
            "strategy": "PARTITION_STRATEGY_HASH",
          },
          "relation": {
            "inh": true,
            "location": 239,
            "relname": "mchash",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "a",
                "is_local": true,
                "location": 247,
                "typeName": {
                  "location": 249,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
            {
              "ColumnDef": {
                "colname": "b",
                "is_local": true,
                "location": 254,
                "typeName": {
                  "location": 256,
                  "names": [
                    {
                      "String": {
                        "sval": "text",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
            {
              "ColumnDef": {
                "colname": "c",
                "is_local": true,
                "location": 262,
                "typeName": {
                  "location": 264,
                  "names": [
                    {
                      "String": {
                        "sval": "jsonb",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`hash_part.sql > line 11 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "inhRelations": [
            {
              "RangeVar": {
                "inh": true,
                "location": 37,
                "relname": "mchash",
                "relpersistence": "p",
              },
            },
          ],
          "oncommit": "ONCOMMIT_NOOP",
          "partbound": {
            "location": 55,
            "modulus": 4,
            "strategy": "h",
          },
          "relation": {
            "inh": true,
            "location": 14,
            "relname": "mchash1",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`hash_part.sql > line 13 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 39,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "A_Const": {
                          "ival": {},
                          "location": 64,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 4,
                          },
                          "location": 67,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {},
                          "location": 70,
                        },
                      },
                      {
                        "A_Const": {
                          "isnull": true,
                          "location": 73,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "satisfies_hash_partition",
                        },
                      },
                    ],
                    "location": 39,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`hash_part.sql > line 16 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 28,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 53,
                              "sval": {
                                "sval": "tenk1",
                              },
                            },
                          },
                          "location": 60,
                          "typeName": {
                            "location": 62,
                            "names": [
                              {
                                "String": {
                                  "sval": "regclass",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 4,
                          },
                          "location": 72,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {},
                          "location": 75,
                        },
                      },
                      {
                        "A_Const": {
                          "isnull": true,
                          "location": 78,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "satisfies_hash_partition",
                        },
                      },
                    ],
                    "location": 28,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`hash_part.sql > line 19 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 45,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 70,
                              "sval": {
                                "sval": "mchash1",
                              },
                            },
                          },
                          "location": 79,
                          "typeName": {
                            "location": 81,
                            "names": [
                              {
                                "String": {
                                  "sval": "regclass",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 4,
                          },
                          "location": 91,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {},
                          "location": 94,
                        },
                      },
                      {
                        "A_Const": {
                          "isnull": true,
                          "location": 97,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "satisfies_hash_partition",
                        },
                      },
                    ],
                    "location": 45,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`hash_part.sql > line 22 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 28,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 53,
                              "sval": {
                                "sval": "mchash",
                              },
                            },
                          },
                          "location": 61,
                          "typeName": {
                            "location": 63,
                            "names": [
                              {
                                "String": {
                                  "sval": "regclass",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {},
                          "location": 73,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {},
                          "location": 76,
                        },
                      },
                      {
                        "A_Const": {
                          "isnull": true,
                          "location": 79,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "satisfies_hash_partition",
                        },
                      },
                    ],
                    "location": 28,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`hash_part.sql > line 25 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 32,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 57,
                              "sval": {
                                "sval": "mchash",
                              },
                            },
                          },
                          "location": 65,
                          "typeName": {
                            "location": 67,
                            "names": [
                              {
                                "String": {
                                  "sval": "regclass",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 77,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {},
                          "location": 80,
                        },
                      },
                      {
                        "A_Const": {
                          "isnull": true,
                          "location": 84,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "satisfies_hash_partition",
                        },
                      },
                    ],
                    "location": 32,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`hash_part.sql > line 28 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 32,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 57,
                              "sval": {
                                "sval": "mchash",
                              },
                            },
                          },
                          "location": 65,
                          "typeName": {
                            "location": 67,
                            "names": [
                              {
                                "String": {
                                  "sval": "regclass",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 77,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 80,
                        },
                      },
                      {
                        "A_Const": {
                          "isnull": true,
                          "location": 83,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "satisfies_hash_partition",
                        },
                      },
                    ],
                    "location": 32,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`hash_part.sql > line 31 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 28,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 53,
                              "sval": {
                                "sval": "mchash",
                              },
                            },
                          },
                          "location": 61,
                          "typeName": {
                            "location": 63,
                            "names": [
                              {
                                "String": {
                                  "sval": "regclass",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "isnull": true,
                          "location": 73,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {},
                          "location": 79,
                        },
                      },
                      {
                        "A_Const": {
                          "isnull": true,
                          "location": 82,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "satisfies_hash_partition",
                        },
                      },
                    ],
                    "location": 28,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`hash_part.sql > line 34 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 30,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 55,
                              "sval": {
                                "sval": "mchash",
                              },
                            },
                          },
                          "location": 63,
                          "typeName": {
                            "location": 65,
                            "names": [
                              {
                                "String": {
                                  "sval": "regclass",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 4,
                          },
                          "location": 75,
                        },
                      },
                      {
                        "A_Const": {
                          "isnull": true,
                          "location": 78,
                        },
                      },
                      {
                        "A_Const": {
                          "isnull": true,
                          "location": 84,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "satisfies_hash_partition",
                        },
                      },
                    ],
                    "location": 30,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`hash_part.sql > line 37 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 31,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 56,
                              "sval": {
                                "sval": "mchash",
                              },
                            },
                          },
                          "location": 64,
                          "typeName": {
                            "location": 66,
                            "names": [
                              {
                                "String": {
                                  "sval": "regclass",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 4,
                          },
                          "location": 76,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {},
                          "location": 79,
                        },
                      },
                      {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "isnull": true,
                              "location": 82,
                            },
                          },
                          "location": 86,
                          "typeName": {
                            "location": 88,
                            "names": [
                              {
                                "String": {
                                  "sval": "pg_catalog",
                                },
                              },
                              {
                                "String": {
                                  "sval": "int4",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "isnull": true,
                              "location": 93,
                            },
                          },
                          "location": 97,
                          "typeName": {
                            "location": 99,
                            "names": [
                              {
                                "String": {
                                  "sval": "text",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "isnull": true,
                              "location": 105,
                            },
                          },
                          "location": 109,
                          "typeName": {
                            "location": 111,
                            "names": [
                              {
                                "String": {
                                  "sval": "json",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "satisfies_hash_partition",
                        },
                      },
                    ],
                    "location": 31,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`hash_part.sql > line 40 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 30,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 55,
                              "sval": {
                                "sval": "mchash",
                              },
                            },
                          },
                          "location": 63,
                          "typeName": {
                            "location": 65,
                            "names": [
                              {
                                "String": {
                                  "sval": "regclass",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 3,
                          },
                          "location": 75,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 78,
                        },
                      },
                      {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "isnull": true,
                              "location": 81,
                            },
                          },
                          "location": 85,
                          "typeName": {
                            "location": 87,
                            "names": [
                              {
                                "String": {
                                  "sval": "pg_catalog",
                                },
                              },
                              {
                                "String": {
                                  "sval": "int4",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "satisfies_hash_partition",
                        },
                      },
                    ],
                    "location": 30,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`hash_part.sql > line 43 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 32,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 57,
                              "sval": {
                                "sval": "mchash",
                              },
                            },
                          },
                          "location": 65,
                          "typeName": {
                            "location": 67,
                            "names": [
                              {
                                "String": {
                                  "sval": "regclass",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 2,
                          },
                          "location": 77,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 80,
                        },
                      },
                      {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "isnull": true,
                              "location": 83,
                            },
                          },
                          "location": 87,
                          "typeName": {
                            "location": 89,
                            "names": [
                              {
                                "String": {
                                  "sval": "pg_catalog",
                                },
                              },
                              {
                                "String": {
                                  "sval": "int4",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "isnull": true,
                              "location": 94,
                            },
                          },
                          "location": 98,
                          "typeName": {
                            "location": 100,
                            "names": [
                              {
                                "String": {
                                  "sval": "pg_catalog",
                                },
                              },
                              {
                                "String": {
                                  "sval": "int4",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "satisfies_hash_partition",
                        },
                      },
                    ],
                    "location": 32,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`hash_part.sql > line 46 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 32,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 57,
                              "sval": {
                                "sval": "mchash",
                              },
                            },
                          },
                          "location": 65,
                          "typeName": {
                            "location": 67,
                            "names": [
                              {
                                "String": {
                                  "sval": "regclass",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 4,
                          },
                          "location": 77,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {},
                          "location": 80,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {},
                          "location": 83,
                        },
                      },
                      {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 86,
                              "sval": {
                                "sval": "",
                              },
                            },
                          },
                          "location": 88,
                          "typeName": {
                            "location": 90,
                            "names": [
                              {
                                "String": {
                                  "sval": "text",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "satisfies_hash_partition",
                        },
                      },
                    ],
                    "location": 32,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`hash_part.sql > line 49 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 31,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 56,
                              "sval": {
                                "sval": "mchash",
                              },
                            },
                          },
                          "location": 64,
                          "typeName": {
                            "location": 66,
                            "names": [
                              {
                                "String": {
                                  "sval": "regclass",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 4,
                          },
                          "location": 76,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {},
                          "location": 79,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 2,
                          },
                          "location": 82,
                        },
                      },
                      {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 85,
                              "sval": {
                                "sval": "",
                              },
                            },
                          },
                          "location": 87,
                          "typeName": {
                            "location": 89,
                            "names": [
                              {
                                "String": {
                                  "sval": "text",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "satisfies_hash_partition",
                        },
                      },
                    ],
                    "location": 31,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`hash_part.sql > line 52 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 118,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 143,
                              "sval": {
                                "sval": "mchash",
                              },
                            },
                          },
                          "location": 151,
                          "typeName": {
                            "location": 153,
                            "names": [
                              {
                                "String": {
                                  "sval": "regclass",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 2,
                          },
                          "location": 163,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 166,
                        },
                      },
                      {
                        "TypeCast": {
                          "arg": {
                            "A_ArrayExpr": {
                              "elements": [
                                {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 1,
                                    },
                                    "location": 192,
                                  },
                                },
                                {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 2,
                                    },
                                    "location": 194,
                                  },
                                },
                              ],
                              "location": 186,
                            },
                          },
                          "location": 196,
                          "typeName": {
                            "arrayBounds": [
                              {
                                "Integer": {},
                              },
                            ],
                            "location": 198,
                            "names": [
                              {
                                "String": {
                                  "sval": "pg_catalog",
                                },
                              },
                              {
                                "String": {
                                  "sval": "int4",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    ],
                    "func_variadic": true,
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "satisfies_hash_partition",
                        },
                      },
                    ],
                    "location": 118,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`hash_part.sql > line 57 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "partspec": {
            "location": 101,
            "partParams": [
              {
                "PartitionElem": {
                  "location": 120,
                  "name": "a",
                  "opclass": [
                    {
                      "String": {
                        "sval": "part_test_int4_ops",
                      },
                    },
                  ],
                },
              },
              {
                "PartitionElem": {
                  "location": 142,
                  "name": "b",
                  "opclass": [
                    {
                      "String": {
                        "sval": "part_test_int4_ops",
                      },
                    },
                  ],
                },
              },
            ],
            "strategy": "PARTITION_STRATEGY_HASH",
          },
          "relation": {
            "inh": true,
            "location": 65,
            "relname": "mcinthash",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "a",
                "is_local": true,
                "location": 76,
                "typeName": {
                  "location": 78,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
            {
              "ColumnDef": {
                "colname": "b",
                "is_local": true,
                "location": 83,
                "typeName": {
                  "location": 85,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
            {
              "ColumnDef": {
                "colname": "c",
                "is_local": true,
                "location": 90,
                "typeName": {
                  "location": 92,
                  "names": [
                    {
                      "String": {
                        "sval": "jsonb",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`hash_part.sql > line 61 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 54,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 79,
                              "sval": {
                                "sval": "mcinthash",
                              },
                            },
                          },
                          "location": 90,
                          "typeName": {
                            "location": 92,
                            "names": [
                              {
                                "String": {
                                  "sval": "regclass",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 4,
                          },
                          "location": 102,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {},
                          "location": 105,
                        },
                      },
                      {
                        "A_ArrayExpr": {
                          "elements": [
                            {
                              "A_Const": {
                                "ival": {},
                                "location": 131,
                              },
                            },
                            {
                              "A_Const": {
                                "ival": {},
                                "location": 134,
                              },
                            },
                          ],
                          "location": 125,
                        },
                      },
                    ],
                    "func_variadic": true,
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "satisfies_hash_partition",
                        },
                      },
                    ],
                    "location": 54,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`hash_part.sql > line 65 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 27,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 52,
                              "sval": {
                                "sval": "mcinthash",
                              },
                            },
                          },
                          "location": 63,
                          "typeName": {
                            "location": 65,
                            "names": [
                              {
                                "String": {
                                  "sval": "regclass",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 4,
                          },
                          "location": 75,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {},
                          "location": 78,
                        },
                      },
                      {
                        "A_ArrayExpr": {
                          "elements": [
                            {
                              "A_Const": {
                                "ival": {},
                                "location": 104,
                              },
                            },
                            {
                              "A_Const": {
                                "ival": {
                                  "ival": 1,
                                },
                                "location": 107,
                              },
                            },
                          ],
                          "location": 98,
                        },
                      },
                    ],
                    "func_variadic": true,
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "satisfies_hash_partition",
                        },
                      },
                    ],
                    "location": 27,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`hash_part.sql > line 69 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 25,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 50,
                              "sval": {
                                "sval": "mcinthash",
                              },
                            },
                          },
                          "location": 61,
                          "typeName": {
                            "location": 63,
                            "names": [
                              {
                                "String": {
                                  "sval": "regclass",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 4,
                          },
                          "location": 73,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {},
                          "location": 76,
                        },
                      },
                      {
                        "TypeCast": {
                          "arg": {
                            "A_ArrayExpr": {
                              "location": 96,
                            },
                          },
                          "location": 103,
                          "typeName": {
                            "arrayBounds": [
                              {
                                "Integer": {},
                              },
                            ],
                            "location": 105,
                            "names": [
                              {
                                "String": {
                                  "sval": "pg_catalog",
                                },
                              },
                              {
                                "String": {
                                  "sval": "int4",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    ],
                    "func_variadic": true,
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "satisfies_hash_partition",
                        },
                      },
                    ],
                    "location": 25,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`hash_part.sql > line 73 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 23,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 48,
                              "sval": {
                                "sval": "mcinthash",
                              },
                            },
                          },
                          "location": 59,
                          "typeName": {
                            "location": 61,
                            "names": [
                              {
                                "String": {
                                  "sval": "regclass",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 4,
                          },
                          "location": 71,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {},
                          "location": 74,
                        },
                      },
                      {
                        "A_ArrayExpr": {
                          "elements": [
                            {
                              "FuncCall": {
                                "funcformat": "COERCE_EXPLICIT_CALL",
                                "funcname": [
                                  {
                                    "String": {
                                      "sval": "now",
                                    },
                                  },
                                ],
                                "location": 100,
                              },
                            },
                            {
                              "FuncCall": {
                                "funcformat": "COERCE_EXPLICIT_CALL",
                                "funcname": [
                                  {
                                    "String": {
                                      "sval": "now",
                                    },
                                  },
                                ],
                                "location": 107,
                              },
                            },
                          ],
                          "location": 94,
                        },
                      },
                    ],
                    "func_variadic": true,
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "satisfies_hash_partition",
                        },
                      },
                    ],
                    "location": 23,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`hash_part.sql > line 77 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "partspec": {
            "location": 94,
            "partParams": [
              {
                "PartitionElem": {
                  "location": 113,
                  "name": "a",
                },
              },
            ],
            "strategy": "PARTITION_STRATEGY_HASH",
          },
          "relation": {
            "inh": true,
            "location": 74,
            "relname": "text_hashp",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "a",
                "is_local": true,
                "location": 86,
                "typeName": {
                  "location": 88,
                  "names": [
                    {
                      "String": {
                        "sval": "text",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`hash_part.sql > line 80 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "inhRelations": [
            {
              "RangeVar": {
                "inh": true,
                "location": 39,
                "relname": "text_hashp",
                "relpersistence": "p",
              },
            },
          ],
          "oncommit": "ONCOMMIT_NOOP",
          "partbound": {
            "location": 61,
            "modulus": 2,
            "strategy": "h",
          },
          "relation": {
            "inh": true,
            "location": 14,
            "relname": "text_hashp0",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`hash_part.sql > line 81 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "inhRelations": [
            {
              "RangeVar": {
                "inh": true,
                "location": 39,
                "relname": "text_hashp",
                "relpersistence": "p",
              },
            },
          ],
          "oncommit": "ONCOMMIT_NOOP",
          "partbound": {
            "location": 61,
            "modulus": 2,
            "remainder": 1,
            "strategy": "h",
          },
          "relation": {
            "inh": true,
            "location": 14,
            "relname": "text_hashp1",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`hash_part.sql > line 82 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 116,
                "name": "satisfies",
                "val": {
                  "BoolExpr": {
                    "args": [
                      {
                        "FuncCall": {
                          "args": [
                            {
                              "TypeCast": {
                                "arg": {
                                  "A_Const": {
                                    "location": 141,
                                    "sval": {
                                      "sval": "text_hashp",
                                    },
                                  },
                                },
                                "location": 153,
                                "typeName": {
                                  "location": 155,
                                  "names": [
                                    {
                                      "String": {
                                        "sval": "regclass",
                                      },
                                    },
                                  ],
                                  "typemod": -1,
                                },
                              },
                            },
                            {
                              "A_Const": {
                                "ival": {
                                  "ival": 2,
                                },
                                "location": 165,
                              },
                            },
                            {
                              "A_Const": {
                                "ival": {},
                                "location": 168,
                              },
                            },
                            {
                              "TypeCast": {
                                "arg": {
                                  "A_Const": {
                                    "location": 171,
                                    "sval": {
                                      "sval": "xxx",
                                    },
                                  },
                                },
                                "location": 176,
                                "typeName": {
                                  "location": 178,
                                  "names": [
                                    {
                                      "String": {
                                        "sval": "text",
                                      },
                                    },
                                  ],
                                  "typemod": -1,
                                },
                              },
                            },
                          ],
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "satisfies_hash_partition",
                              },
                            },
                          ],
                          "location": 116,
                        },
                      },
                      {
                        "FuncCall": {
                          "args": [
                            {
                              "TypeCast": {
                                "arg": {
                                  "A_Const": {
                                    "location": 216,
                                    "sval": {
                                      "sval": "text_hashp",
                                    },
                                  },
                                },
                                "location": 228,
                                "typeName": {
                                  "location": 230,
                                  "names": [
                                    {
                                      "String": {
                                        "sval": "regclass",
                                      },
                                    },
                                  ],
                                  "typemod": -1,
                                },
                              },
                            },
                            {
                              "A_Const": {
                                "ival": {
                                  "ival": 2,
                                },
                                "location": 240,
                              },
                            },
                            {
                              "A_Const": {
                                "ival": {
                                  "ival": 1,
                                },
                                "location": 243,
                              },
                            },
                            {
                              "TypeCast": {
                                "arg": {
                                  "A_Const": {
                                    "location": 246,
                                    "sval": {
                                      "sval": "xxx",
                                    },
                                  },
                                },
                                "location": 251,
                                "typeName": {
                                  "location": 253,
                                  "names": [
                                    {
                                      "String": {
                                        "sval": "text",
                                      },
                                    },
                                  ],
                                  "typemod": -1,
                                },
                              },
                            },
                          ],
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "satisfies_hash_partition",
                              },
                            },
                          ],
                          "location": 191,
                        },
                      },
                    ],
                    "boolop": "OR_EXPR",
                    "location": 184,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`hash_part.sql > line 86 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "mchash",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_TABLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`hash_part.sql > line 89 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "mcinthash",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_TABLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`hash_part.sql > line 90 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "text_hashp",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_TABLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;
